# gateway-service/docs/swagger.json
@@ -42,21 +42,21 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Login successful with user details and token",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/main.LoginSuccessResponse"
                         }
                     },
                     "401": {
-                        "description": "Invalid Credentials",
+                        "description": "Login failed",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/main.FailResponse"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Server error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/main.FailResponse"
                         }
                     }
                 }
@@ -88,7 +88,7 @@
                 ],
                 "responses": {
                     "202": {
-                        "description": "Accepted",
+                        "description": "Success",
                         "schema": {
                             "type": "string"
                         }
@@ -215,15 +215,21 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created",
+                        "description": "Registration successful",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/main.SuccessResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Registration failed",
+                        "schema": {
+                            "$ref": "#/definitions/main.FailResponse"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Server error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/main.FailResponse"
                         }
                     }
                 }
@@ -231,6 +237,28 @@
         }
     },
     "definitions": {
+        "main.FailResponse": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.LoginSuccessResponse": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/main.User"
+                }
+            }
+        },
         "main.MobilePaymentRequest": {
             "type": "object",
             "properties": {
@@ -285,6 +313,14 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.SuccessResponse": {
+            "type": "object",
+            "properties": {
+                "status": {
                     "type": "string"
                 }
             }
